<resources>
    <string name="app_name">智慧牧场基础版</string>
    <string name="login_in">用户登录</string>
    <string name="input_name">用户名/电话号码</string>
    <string name="input_password">密码</string>
    <string name="bind">登录</string>
    <string name="sign_in">用户注册</string>
    <string name="sign_bttn">注册</string>
    <string name="company_support">阿启泰技术支持</string>
    <string name="title_home">首页</string>
    <string name="title_notifications">个人中心</string>
    <string name="watching">监控中心</string>
    <string name="statellite">卫星放牧</string>
    <string name="farmerdoc">牧户档案</string>
    <string name="plantdoc">种植档案</string>
    <string name="medicinedoc">医疗档案</string>
    <string name="farmdoc">养殖档案</string>
    <string name="sign_in_">注册</string>
    <string name="agree_deal">同意条款</string>
    <string name="check_file">查看条款内容</string>
    <string name="LANCamera">摄像头设置</string>
    <string name="camera_name">设备名称 ：</string>
    <string name="input_camera_name">请输入设备名称</string>
    <string name="camera_ip">设备IP地址：</string>
    <string name="input_camera_ip">请输入设备IP</string>
    <string name="camera_port">设备端口号：</string>
    <string name="input_camera_port">请输入端口号</string>
    <string name="add">添加</string>
    <string name="canxel">取消</string>
    <string name="add_dev">添加设备</string>
    <string name="camera_user">设备用户名：</string>
    <string name="input_camera_user">请输入用户名</string>
    <string name="camera_pass">设备密码：</string>
    <string name="input_camera_pass">请输入设备密码</string>
    <string name="dev_channel">设备通道：</string>
    <string name="dev_stream">码流类型：</string>
    <string name="start">开始</string>
    <string name="take_picture">拍照</string>
    <string name="stop">停止</string>
    <string name="dvis">设备</string>
    <string name="UHF">UHF高频设置</string>
    <string name="find">发现</string>
    <string name="my_msg">个人信息</string>
    <string name="about_us">关于我们</string>
    <string name="quit">退出</string>
    <string name="service">服务内容</string>
    <string name="inDEV">点进设备</string>
</resources>
