<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/top_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.camera.AddDevActivity">
    <LinearLayout
        android:background="@color/colorBlackblue"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/top_tab"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:id="@+id/add_lan_camera"
                android:textColor="@color/colorwhite"
                android:textSize="18dp"
                android:text="添加网络摄像头"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_camera"/>
            <TextView
                android:textColor="@color/colorwhite"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"
                android:text="@string/camera_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/camera_name"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:lines="1"
                android:textSize="18dp"
                android:paddingLeft="8dp"
                android:background="@drawable/edittext"
                android:textColorHint="@color/colorTextGrey"
                android:hint="@string/input_camera_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_camera_ip"/>
            <TextView
                android:textColor="@color/colorwhite"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"
                android:text="@string/camera_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/camera_ip"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:lines="1"
                android:textSize="18dp"
                android:paddingLeft="8dp"
                android:background="@drawable/edittext"
                android:textColorHint="@color/colorTextGrey"
                android:hint="@string/input_camera_ip"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_port"/>
            <TextView
                android:textColor="@color/colorwhite"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"
                android:text="@string/camera_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/camera_port"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:lines="1"
                android:textSize="18dp"
                android:paddingLeft="8dp"
                android:background="@drawable/edittext"
                android:textColorHint="@color/colorTextGrey"
                android:hint="@string/input_camera_port"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_dev_user"/>
            <TextView
                android:textColor="@color/colorwhite"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"
                android:text="@string/camera_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/camera_user"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:lines="1"
                android:textSize="18dp"
                android:paddingLeft="8dp"
                android:background="@drawable/edittext"
                android:textColorHint="@color/colorTextGrey"
                android:hint="@string/input_camera_user"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_dev_pass"/>
            <TextView
                android:textColor="@color/colorwhite"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"
                android:text="@string/camera_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/camera_pass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:lines="1"
                android:textSize="18dp"
                android:paddingLeft="8dp"
                android:background="@drawable/edittext"
                android:textColorHint="@color/colorTextGrey"
                android:hint="@string/input_camera_pass"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/add_camera_bttn"
                android:text="@string/add"
                android:background="@color/afterSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/cancel_bttn"
                android:text="@string/canxel"
                android:layout_marginLeft="30dp"
                android:background="@color/afterSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>