<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:screenOrientation ="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/top_tab"
    tools:context=".view.login.LoginActivity">
<RelativeLayout
    android:background="@color/colorBlackblue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/TOPbackground"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@mipmap/loginspc"/>
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_in"
            android:textSize="20dp"
            android:textColorHint="@color/colorwhite"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/pic1"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="65dp"
            android:layout_height="199dp"
            android:background="@mipmap/loginpc"/>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/line1"
        android:orientation="vertical"
        android:layout_below="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="40dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
            <ImageView
                android:id="@+id/iconphone"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_phone"/>

            <EditText
                android:id="@+id/user_name_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:lines="1"
                android:textSize="18dp"
                android:paddingLeft="8dp"
                android:background="@drawable/edittext"
                android:textColorHint="@color/colorTextGrey"
                android:hint="@string/input_name"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/passerro"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_password"/>
            <FrameLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/user_pass_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textSize="18dp"
                    android:paddingLeft="8dp"
                    android:background="@drawable/edittext"
                    android:textColorHint="@color/colorTextGrey"
                    android:hint="@string/input_password"/>

                <ToggleButton
                    android:id="@+id/togglebtton"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="20dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="10dp"
                    android:background="@drawable/selector_pwd"
                    android:textOff=" "
                    android:textOn="" />
            </FrameLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/showerro"
            android:textColor="@color/read"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/bttn_sign_login"
                android:layout_gravity="center|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorselector"
                android:text="@string/sign_in"
                android:layout_marginRight="20dp" />
            <TextView
                android:id="@+id/remmber_pass"
                android:layout_gravity="center|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="忘记密码"
                android:textColor="@color/colorselector"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_below="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView

            android:id="@+id/belowbackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/tabpc"/>
        <Button
            android:id="@+id/bttn_loign_in"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_button"
            android:gravity="center"
            android:enabled="false"
            android:text="@string/bind"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/company_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/company_support"
            android:layout_marginTop="120dp"/>



    </FrameLayout>
</RelativeLayout>
</RelativeLayout>